<resources>
    <string name="app_name">Calculator</string>
    <string name="result">计算结果</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonEqual">=</string>
    <string name="expression">算式</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonBack">Back</string>
    <string name="buttonPlus">+</string>
    <string name="buttonSub">-</string>
    <string name="buttonMod">%</string>
    <string name="buttonPower">^</string>
    <string name="buttonMul">×</string>
    <string name="buttonDiv">÷</string>
    <string name="reset">Reset</string>
    <string name="title">计算器</string>
    <string name="history">历史记录</string>
    <string name="mOldSelectedPosition">mOldSelectedPosition</string>
    <string name="error">ERROR!除数为0/对0取模?</string>

</resources>
